--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,11 @@
-</br>
-<center>
-    <h1> 404 Page Not Found !!! </h1>
-    <p>Page Not Found - Please Try Again...</p>
-</center>
+{% extends 'base.html' %}
+
+{% block content %}
+
+    </br>
+    <center>
+        <h1> 404 Page Not Found !!! </h1>
+        <p>Page Not Found - Please Try Again...</p>
+    </center>
+
+{% endblock%}
